# cam_array

./: README  install_mvBlueFox_drivers.sh
camera_array/: CMakeLists.txt  package.xml
camera_array/.svn/: entries
camera_array/documents/: Filters.ods  filter_trasmission.txt  filter_trasmission_plus_camera.txt  plot_Spectral_resolution.m
camera_array/launch/: four_cameras.launch  four_cameras_single_listener.launch  odroidXU_3cameraNodes.launch  one_camera_single_listener.launch  stereo_camera_1&2.launch  stereo_camera_3and2.launch  three_cameras.launch  two_cameras_single_listener.launch
camera_array_arm/: CMakeLists.txt  package.xml
camera_array_arm/ccny_mvVirtualDevice/apps/Common/: Info.h
camera_array_arm/ccny_mvVirtualDevice/apps/mvDeviceConfigure/: DeviceConfigureFrame.h  DeviceHandler.h  DeviceHandlerBlueDevice.h  Timeout.h
camera_array_arm/ccny_mvVirtualDevice/apps/mvPropView/: PropViewFrame.h  WizardLUTControl.h
camera_array_arm/include/camera_array_arm/: MyCamera.h  camera.h
camera_array_arm/launch/: camera_calibrator.launch  camera_listener. cpp  camera_node.launch  ndvi_computer.launch  ndvi_computer_pc.launch  one_camera.launch  stereo_camera.launch  stereo_camera_1and2.launch  usbio.launch
camera_array_arm/launch/.svn/: entries
camera_array_arm/launch/.svn/text-base/: four_cameras_single_listener.launch.svn-base  one_camera_single_listener.launch.svn-base  two_camera_nodes.launch.svn-base
camera_array_arm/resources/: calibration_1_2  calibraton_1_3_dummy  camera_1.yaml  camera_3.yaml
camera_array_arm/resources/new/: calibration12  camera_2.yaml
camera_array_arm/src/.svn/: entries
camera_array_arm/src/CameraConverter/: CameraConverter.cpp  CameraConverter.hpp  CameraConverterTest.cpp
camera_array_arm/src/FuzzyClustering/: cmeans.cpp  test.cpp
camera_array_arm/src/ImageAnalyzer/: ImageAnalyzer.hpp  ImageAnalyzerTest.cpp  ImageAnalyzer_structs.hpp  compute_ndvi_online.cpp  compute_pointcloud.cpp  detect_material_online.cpp  disparity_map.cpp  disparity_map_clean_disparity.cpp  disparity_map_new_image.cpp  disparity_map_slide_images.cpp  disparity_map_slide_images2.cpp  disparity_map_winner_take_all.cpp  ndvi_clustering_parabola.cpp  ndvi_clustering_sigmoid.cpp  utilities.cpp
camera_array_arm/src/PID/: PID.cpp  PID.hpp
camera_array_arm/src/StereoConverter/: StereoConverter.cpp  StereoConverter.hpp  StereoConverterTest.cpp
camera_array_arm/src/main/: calibration.cpp  single_camera_main.cpp  stereo_viewer_runningOutput.cpp  test.cpp  test_var.cpp
camera_array_arm/src/mv_bluefox_driver/: MyCamera.cpp  camera.cpp  camera_node.cpp  my_camera_node.cpp  nodelets.cpp
camera_array_arm/src/old_files/: DetectMaterial.cpp  DetectMaterial_online.cpp  ImageAnalyzer_Ndvi_clustering_parabola.cpp  R  camera_viewer.cpp  disparityMap_CleanDisparity.cpp  disparityMap_multipleThreshold.cpp  disparityMap_new_image.cpp  disparityMap_slide_images.cpp  disparityMap_stereo.cpp  image_analyzer_Ndvi_clustering_parabola_new.cpp  image_analyzer_Ndvi_clustering_parabola_old.cpp  image_analyzer_ndvi_online.cpp  image_analyzer_user.cpp  read_4images_sigmoid.cpp  read_image.cpp  read_image_sigmoid.cpp  stereo_viewer.cpp  stereo_viewer_runningOutput.hpp
ccny_my_camera_drivers/: CMakeLists.txt  package.xml
ccny_my_camera_drivers/ccny_mvVirtualDevice/: Build.info
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/: mvDebugFlags.mvd
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/Callback/x86_64/: Callback
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/Callback_C/x86_64/: Callback
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/CaptureToUserMemory_C/x86_64/: CaptureToUserMemory
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/ContinuousCaptureAllDevices/x86_64/: ContinuousCaptureAllDevicesLIN
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/ContinuousCapture_C/x86_64/: ContinuousCapture
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/DigitalIOs/x86_64/: DigitalIOs
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/FirmwareUpgrade/x86_64/: FirmwareUpgrade
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/GenICamInterfaceLayout/x86_64/: GenICamInterfaceLayout
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/GenericInterfaceLayout/x86_64/: GenericInterfaceLayout
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/LiveSnap/x86_64/: LiveSnap
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/LiveSnapFLTK/x86_64/: LiveSnapFLTK
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/PowerDownTest/x86_64/: PowerDownTest
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/SingleCapture/x86_64/: SingleCapture
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/SingleCaptureStorage/x86_64/: SingleCaptureStorage
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/SingleSnap/: saveimg.cpp
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/SingleSnap/x86_64/: SingleSnap
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/mvDeviceConfigure/: DeviceConfigureFrame.cpp  DeviceHandler.cpp  DeviceHandlerBlueDevice.cpp  DeviceHandlerBlueFOX.cpp  LogOutputHandlerDlg.cpp  Makefile.inc
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/mvPropView/: HistogramCanvas.cpp  PropGridFrameBase.cpp  PropViewFrame.cpp  ValuesFromUserDlg.cpp
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/testserial/x86/: testserial
ccny_my_camera_drivers/ccny_mvVirtualDevice/apps/testserial/x86_64/: testserial
ccny_my_camera_drivers/ccny_mvVirtualDevice/common/System/linux/: version.inc
ccny_my_camera_drivers/ccny_mvVirtualDevice/python-site-packages/mvIMPACT/: acquire.py
ccny_my_camera_drivers/include/mv_bluefox_driver/: camera.h
ccny_my_camera_drivers/resources/: calibration_1_2~  calibration_2_3  camera_2.yaml  camera_2.yaml~
ccny_my_camera_drivers/resources/new/: calibration12~  calibration13  camera_1.yaml  camera_2.xml  camera_2.yaml~  camera_3.yaml
ccny_my_camera_drivers/src/mv_bluefox_driver/: camera.cpp
odroid_usbio_driver/: CMakeLists.txt  package.xml
odroid_usbio_driver/launch/: usbio.launch
odroid_usbio_driver/src/: hid-libusb.c  hk_usb_io.py  main.cpp
(+54 files in other folders)
